--- a/source/BlockInspector.lfm
+++ b/source/BlockInspector.lfm
@@ -1,15 +1,16 @@
 object BlockForm: TBlockForm
-  Left = 1249
-  Height = 263
-  Top = 171
-  Width = 460
+  Left = 100
+  Height = 680
+  Top = 100
+  Width = 1080
   BorderIcons = [biSystemMenu]
   Caption = 'Block inspector'
-  ClientHeight = 263
-  ClientWidth = 460
+  ClientHeight = 680
+  ClientWidth = 1080
   Color = clForm
-  Constraints.MinHeight = 200
-  Constraints.MinWidth = 460
+  Constraints.MinHeight = 400
+  Constraints.MinWidth = 920
+  DesignTimePPI = 192
   FormStyle = fsStayOnTop
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -17,34 +18,35 @@ object BlockForm: TBlockForm
   OnShow = FormShow
   Position = poMainFormCenter
   ShowHint = True
-  LCLVersion = '2.0.10.0'
+  LCLVersion = '3.6.0.0'
   object TopPanel: TPanel
-    Left = 6
-    Height = 23
-    Top = 6
-    Width = 448
+    Left = 12
+    Height = 61
+    Top = 12
+    Width = 1056
     Align = alTop
     AutoSize = True
-    BorderSpacing.Around = 6
+    BorderSpacing.Around = 12
     BevelOuter = bvNone
-    ClientHeight = 23
-    ClientWidth = 448
+    ClientHeight = 61
+    ClientWidth = 1056
+    ParentBackground = False
     TabOrder = 1
     object BlockEdit: TSpinEdit
-      Left = 33
-      Height = 23
+      Left = 80
+      Height = 61
       Top = 0
-      Width = 88
+      Width = 176
       Align = alLeft
-      BorderSpacing.Left = 4
+      BorderSpacing.Left = 8
       OnChange = BlockEditChange
       TabOrder = 0
     end
     object lblBlockHeadline: TLabel
       Left = 0
-      Height = 23
+      Height = 61
       Top = 0
-      Width = 29
+      Width = 72
       Align = alLeft
       BorderSpacing.CellAlignVertical = ccaCenter
       Caption = 'Block'
@@ -53,12 +55,12 @@ object BlockForm: TBlockForm
       OnDblClick = lblBlockHeadlineDblClick
     end
     object EditBlockInfo: TEdit
-      Left = 125
-      Height = 15
-      Top = 4
-      Width = 319
+      Left = 264
+      Height = 45
+      Top = 8
+      Width = 784
       Align = alClient
-      BorderSpacing.Around = 4
+      BorderSpacing.Around = 8
       BorderSpacing.CellAlignVertical = ccaCenter
       BorderStyle = bsNone
       Color = clForm
@@ -68,37 +70,37 @@ object BlockForm: TBlockForm
     end
   end
   object MapEntryList: TStringGrid
-    Left = 6
-    Height = 125
-    Top = 97
-    Width = 448
+    Left = 12
+    Height = 370
+    Top = 234
+    Width = 1056
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     AutoFillColumns = True
-    BorderSpacing.Around = 6
+    BorderSpacing.Around = 12
     ColCount = 3
     Columns = <    
       item
-        MinSize = 80
-        MaxSize = 100
+        MinSize = 160
+        MaxSize = 200
         SizePriority = 0
         Title.Caption = 'Status'
-        Width = 90
+        Width = 180
       end    
       item
-        MinSize = 130
-        MaxSize = 300
+        MinSize = 260
+        MaxSize = 600
         Title.Caption = 'Start'
-        Width = 177
+        Width = 437
       end    
       item
-        MinSize = 130
-        MaxSize = 300
+        MinSize = 260
+        MaxSize = 600
         Title.Caption = 'Length'
-        Width = 177
+        Width = 437
       end>
-    DefaultColWidth = 80
-    DefaultRowHeight = 16
+    DefaultColWidth = 160
+    DefaultRowHeight = 48
     ExtendedSelect = False
     FixedCols = 0
     MouseWheelOption = mwGrid
@@ -108,199 +110,203 @@ object BlockForm: TBlockForm
     UseXORFeatures = True
     OnHeaderSized = MapEntryListHeaderSized
     ColWidths = (
-      90
-      177
-      177
+      180
+      437
+      437
     )
   end
   object BlockInfo: TGroupBox
-    Left = 6
-    Height = 56
-    Top = 35
-    Width = 448
+    Left = 12
+    Height = 137
+    Top = 85
+    Width = 1056
     Align = alTop
     AutoSize = True
-    BorderSpacing.Around = 6
+    BorderSpacing.Around = 12
     Caption = 'Sector distribution'
     ChildSizing.HorizontalSpacing = 2
     ChildSizing.ShrinkHorizontal = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 42
-    ClientHeight = 36
-    ClientWidth = 444
+    ClientHeight = 100
+    ClientWidth = 1054
+    ParentBackground = False
     TabOrder = 2
     object BICol1Panel: TPanel
-      Left = 4
-      Height = 32
-      Top = 2
-      Width = 119
+      Left = 8
+      Height = 92
+      Top = 4
+      Width = 265
       AutoSize = True
-      BorderSpacing.Left = 4
-      BorderSpacing.Top = 2
-      BorderSpacing.Right = 12
-      BorderSpacing.Bottom = 2
+      BorderSpacing.Left = 8
+      BorderSpacing.Top = 4
+      BorderSpacing.Right = 24
+      BorderSpacing.Bottom = 4
       BevelOuter = bvNone
       ChildSizing.VerticalSpacing = 2
       ChildSizing.ShrinkHorizontal = crsScaleChilds
       ChildSizing.Layout = cclTopToBottomThenLeftToRight
       ChildSizing.ControlsPerLine = 2
-      ClientHeight = 32
-      ClientWidth = 119
+      ClientHeight = 92
+      ClientWidth = 265
+      ParentBackground = False
       TabOrder = 0
       object lblNonTried: TLabel
         Left = 0
-        Height = 15
+        Height = 36
         Hint = 'Non-tried sectors'
-        Top = 0
-        Width = 55
+        Top = 4
+        Width = 137
         BorderSpacing.CellAlignVertical = ccaCenter
         Caption = 'Non-tried:'
         ParentColor = False
       end
       object lblRescued: TLabel
         Left = 0
-        Height = 15
+        Height = 36
         Hint = 'Rescued sectors'
-        Top = 17
-        Width = 55
+        Top = 51
+        Width = 137
         BorderSpacing.CellAlignVertical = ccaCenter
         Caption = 'Rescued:'
         ParentColor = False
       end
       object EditNonTriedSectors: TEdit
         AnchorSideLeft.Side = asrBottom
-        Left = 59
-        Height = 15
+        Left = 145
+        Height = 45
         Top = 0
-        Width = 60
-        BorderSpacing.Left = 4
+        Width = 120
+        BorderSpacing.Left = 8
         BorderStyle = bsNone
         Color = clForm
-        Constraints.MaxWidth = 60
+        Constraints.MaxWidth = 120
         ParentFont = False
         TabOrder = 0
         Text = '0'
       end
       object EditRescuedSectors: TEdit
         AnchorSideLeft.Side = asrBottom
-        Left = 59
-        Height = 15
-        Top = 17
-        Width = 60
-        BorderSpacing.Left = 4
+        Left = 145
+        Height = 45
+        Top = 47
+        Width = 120
+        BorderSpacing.Left = 8
         BorderStyle = bsNone
         Color = clForm
-        Constraints.MaxWidth = 60
+        Constraints.MaxWidth = 120
         ParentFont = False
         TabOrder = 1
         Text = '0'
       end
     end
     object BICol2Panel: TPanel
-      Left = 135
-      Height = 32
-      Top = 2
-      Width = 141
+      Left = 297
+      Height = 92
+      Top = 4
+      Width = 317
       AutoSize = True
-      BorderSpacing.Left = 12
-      BorderSpacing.Top = 2
-      BorderSpacing.Right = 12
-      BorderSpacing.Bottom = 2
+      BorderSpacing.Left = 24
+      BorderSpacing.Top = 4
+      BorderSpacing.Right = 24
+      BorderSpacing.Bottom = 4
       BevelOuter = bvNone
       ChildSizing.VerticalSpacing = 2
       ChildSizing.ShrinkHorizontal = crsScaleChilds
       ChildSizing.Layout = cclTopToBottomThenLeftToRight
       ChildSizing.ControlsPerLine = 2
-      ClientHeight = 32
-      ClientWidth = 141
+      ClientHeight = 92
+      ClientWidth = 317
+      ParentBackground = False
       TabOrder = 1
       object lblNonTrimmed: TLabel
         Left = 0
-        Height = 15
+        Height = 36
         Hint = 'Non-trimmed sectors'
-        Top = 0
-        Width = 77
+        Top = 4
+        Width = 189
         BorderSpacing.CellAlignVertical = ccaCenter
         Caption = 'Non-trimmed:'
         ParentColor = False
       end
       object lblNonScraped: TLabel
         Left = 0
-        Height = 15
+        Height = 36
         Hint = 'Non-scraped sectors'
-        Top = 17
-        Width = 77
+        Top = 51
+        Width = 189
         BorderSpacing.CellAlignVertical = ccaCenter
         Caption = 'Non-scraped:'
         ParentColor = False
       end
       object EditNonTrimmedSectors: TEdit
         AnchorSideLeft.Side = asrBottom
-        Left = 81
-        Height = 15
+        Left = 197
+        Height = 45
         Top = 0
-        Width = 60
-        BorderSpacing.Left = 4
+        Width = 120
+        BorderSpacing.Left = 8
         BorderStyle = bsNone
         Color = clForm
-        Constraints.MaxWidth = 60
+        Constraints.MaxWidth = 120
         ParentFont = False
         TabOrder = 0
         Text = '0'
       end
       object EditNonScrapedSectors: TEdit
         AnchorSideLeft.Side = asrBottom
-        Left = 81
-        Height = 15
-        Top = 17
-        Width = 60
-        BorderSpacing.Left = 4
+        Left = 197
+        Height = 45
+        Top = 47
+        Width = 120
+        BorderSpacing.Left = 8
         BorderStyle = bsNone
         Color = clForm
-        Constraints.MaxWidth = 60
+        Constraints.MaxWidth = 120
         ParentFont = False
         TabOrder = 1
         Text = '0'
       end
     end
     object BICol3Panel: TPanel
-      Left = 288
-      Height = 32
-      Top = 2
-      Width = 135
+      Left = 638
+      Height = 92
+      Top = 4
+      Width = 306
       AutoSize = True
-      BorderSpacing.Left = 12
-      BorderSpacing.Top = 2
-      BorderSpacing.Right = 4
-      BorderSpacing.Bottom = 2
+      BorderSpacing.Left = 24
+      BorderSpacing.Top = 4
+      BorderSpacing.Right = 8
+      BorderSpacing.Bottom = 4
       BevelOuter = bvNone
       ChildSizing.VerticalSpacing = 2
       ChildSizing.ShrinkHorizontal = crsScaleChilds
       ChildSizing.Layout = cclLeftToRightThenTopToBottom
       ChildSizing.ControlsPerLine = 2
-      ClientHeight = 32
-      ClientWidth = 135
+      ClientHeight = 92
+      ClientWidth = 306
+      ParentBackground = False
       TabOrder = 2
       object lblBad: TLabel
         Left = 0
-        Height = 15
+        Height = 36
         Hint = 'Unreadable sectors'
-        Top = 0
-        Width = 71
+        Top = 4
+        Width = 178
         BorderSpacing.CellAlignVertical = ccaCenter
         Caption = 'Bad sector(s):'
         ParentColor = False
       end
       object EditBadSectors: TEdit
         AnchorSideLeft.Side = asrBottom
-        Left = 75
-        Height = 15
+        Left = 186
+        Height = 45
         Top = 0
-        Width = 60
-        BorderSpacing.Left = 4
+        Width = 120
+        BorderSpacing.Left = 8
         BorderStyle = bsNone
         Color = clForm
-        Constraints.MaxWidth = 60
+        Constraints.MaxWidth = 120
         ParentFont = False
         TabOrder = 0
         Text = '0'
@@ -308,43 +314,44 @@ object BlockForm: TBlockForm
     end
   end
   object BottomPanel: TPanel
-    Left = 6
-    Height = 31
-    Top = 228
-    Width = 448
+    Left = 12
+    Height = 64
+    Top = 616
+    Width = 1056
     Align = alTop
     AutoSize = True
-    BorderSpacing.Around = 6
+    BorderSpacing.Around = 12
     BevelOuter = bvNone
-    ClientHeight = 31
-    ClientWidth = 448
+    ClientHeight = 64
+    ClientWidth = 1056
+    ParentBackground = False
     TabOrder = 3
     object TrackCurrentCheckBox: TCheckBox
-      Left = 205
-      Height = 19
+      Left = 529
+      Height = 40
       Hint = 'Always show the block which contains current_pos'
-      Top = 6
-      Width = 147
+      Top = 12
+      Width = 335
       Align = alRight
-      BorderSpacing.Around = 6
+      BorderSpacing.Around = 12
       Caption = '> Track current position'
-      OnChange = TrackCurrentCheckBoxChange
       TabOrder = 0
+      OnChange = TrackCurrentCheckBoxChange
     end
     object CloseBIButton: TButton
-      Left = 358
-      Height = 25
+      Left = 876
+      Height = 52
       Top = 0
-      Width = 90
+      Width = 180
       Align = alRight
       AutoSize = True
-      BorderSpacing.Left = 6
-      BorderSpacing.Bottom = 6
+      BorderSpacing.Left = 12
+      BorderSpacing.Bottom = 12
       Cancel = True
       Caption = 'Close'
-      Constraints.MinWidth = 90
-      OnClick = CloseBIButtonClick
+      Constraints.MinWidth = 180
       TabOrder = 1
+      OnClick = CloseBIButtonClick
     end
   end
 end
